--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -1,5 +1,5 @@
 .about {
-    background: url(../../img/about/bg.png) center repeat;
+    background: url(../img/about/bg.png) center repeat;
     padding-bottom: 247px;
     padding-top: 126px;
     position: relative;
