--- a/scss/blocks/_exclusiveSponsor.scss
+++ b/scss/blocks/_exclusiveSponsor.scss
@@ -1,6 +1,6 @@
 .exlusive-sponsor {
     overflow: hidden;
-    background: url(../../img/exlusive-sponsor/bg.png) center repeat;
+    background: url(../img/exlusive-sponsor/bg.png) center repeat;
     padding-bottom: 187px;
 
     // .exlusive-sponsor__wrapper
