--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,9 +8,8 @@
 @import 'blocks/registration';
 @import 'blocks/generalSponsor';
 @import 'blocks/exclusiveSponsor';
-
-
-
+@import 'blocks/mediaPartners';
+@import 'blocks/footer';
 
 
 
