--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@
 @import 'blocks/exclusiveSponsor';
 @import 'blocks/mediaPartners';
 @import 'blocks/footer';
-
+@import 'blocks/modalReg';
 
 
 // адаптив
