--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1703,6 +1703,8 @@
 //=============================================================== 480 ======================================================
 
 @media (max-width: 480px) {
+
+    
     .header {
         &__logo {
             img {
@@ -1735,6 +1737,10 @@
         margin: 40px auto 0;
         font-size: 12px;
         padding: 10px;
+
+        &__value{
+            margin-left: 18px;
+        }
     }
 
     .girl {
