--- a/scss/blocks/_exclusiveSponsor.scss
+++ b/scss/blocks/_exclusiveSponsor.scss
@@ -95,6 +95,7 @@
         top: 0;
         left: 0;
         transform: translate(-77px, -78px);
+        z-index: -1;
 
     }
 
@@ -103,6 +104,7 @@
         top: 0;
         left: 0;
         transform: translate(371px, -78px);
+        z-index: -1;
 
     }
 }
