--- a/scss/blocks/_registration.scss
+++ b/scss/blocks/_registration.scss
@@ -64,12 +64,14 @@
     &__spot {
         position: absolute;
         top: -100px;
+        z-index: -1;
     }
 
     &__spot-red {
         position: absolute;
         right: 0;
         top: -100px;
+        z-index: -1;
     }
 }
 
@@ -91,7 +93,7 @@
         display: flex;
         height: 100%;
         width: 100%;
-
+        position: relative;
     }
 
     // .conditios__image
@@ -188,6 +190,7 @@
         top: 0;
         left: 50%;
         transform: translate(-50%, -20%);
+        z-index: -1;
 
     }
 }
