--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -328,6 +328,10 @@
         &__item {
             margin-right: 30px;
         }
+
+        // &__circle {
+        //     top: -70px;
+        // }
     }
 
     .main {
