--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -105,7 +105,7 @@
     background: #171d34;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     padding: 30px;
     /* or 50px */
 
