--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -328,10 +328,6 @@
         &__item {
             margin-right: 30px;
         }
-
-        // &__circle {
-        //     top: -70px;
-        // }
     }
 
     .main {
@@ -580,6 +576,15 @@
 
     .trafiс {
         width: 440px;
+    }
+
+    .modal-thank{
+        img{
+            width: 50%;
+        }
+        &__text {
+            font-size: 20px;
+        }
     }
 
   
@@ -859,6 +864,14 @@
 
 
     }
+
+    .modal-thank{
+        width: 745px;
+        padding: 35px;
+        &__text {
+            font-size: 18px;
+        }
+    }
 }
 
 //=============================================================== 860 ======================================================
@@ -1109,6 +1122,18 @@
 
     .trafiс {
         width: 382px;
+    }
+
+    .modal-thank{
+        width: 635px;
+        padding: 35px;
+        &__text {
+            font-size: 16px;
+        }
+        &__btn{
+            font-size: 16px;
+            padding: 9px 35px;
+        }
     }
 }
 
@@ -1547,6 +1572,18 @@
         font-size: 14px;
     }
 
+    .modal-thank{
+        width: 80%;
+        padding: 25px;
+        &__text {
+            font-size: 14px;
+        }
+        &__btn{
+            font-size: 14px;
+            padding: 5px 25px;
+        }
+    }
+
     
 }
 
@@ -1699,6 +1736,17 @@
     .form__btn {
         padding: 4px 24px;
         font-size: 14px;
+    }
+
+    .modal-thank{
+        width: 90%;
+        &__text {
+            font-size: 12px;
+        }
+        &__btn{
+            font-size: 10px;
+            padding: 2px 15px;
+        }
     }
 
 }
