--- a/scss/_hover.scss
+++ b/scss/_hover.scss
@@ -78,3 +78,11 @@
     }
 }
 
+.nav__link{
+    transition: 0.3s;
+    background: transparent;
+    &:hover{
+        color: #74F94C;
+        // text-shadow: 0px 6px 10px rgba(116, 249, 76, 0.65);
+    }
+}
