--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,4 +1,8 @@
 @media (max-width: 1555px) {
+
+    .container {
+        padding: 0 100px;
+    }
     .lines {
         &__text {
             font-size: 28px;
@@ -29,13 +33,17 @@
             }
         }
     }
+
+    .nav__item {
+        margin-right: 50px;
+    }
 }
 
 
 //=============================================================== 1470 ======================================================
 @media (max-width: 1470px) {
     .container {
-        padding: 0 30px;
+        padding: 0 100px;
     }
 
     .girl {
@@ -153,7 +161,7 @@
 @media (max-width: 1270px) {
     .nav {
         &__item {
-            margin-right: 50px;
+            margin-right: 30px;
         }
     }
 
@@ -318,6 +326,13 @@
 
 //=============================================================== 1200 ======================================================
 @media (max-width: 1200px) {
+
+    .header__logo img {
+        width: 180px;
+    }
+    .container{
+        padding: 0 60px;
+    }
     .nav {
         &__registration {
             font-size: 16px;
@@ -877,6 +892,10 @@
 //=============================================================== 860 ======================================================
 
 @media (max-width: 860px) {
+
+    .container{
+        padding: 0 30px;
+    }
 
     .media-partners__spot {
         transform: translate(-40%, -25%);
