--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1774,6 +1774,13 @@
 //=============================================================== 480 ======================================================
 
 @media (max-width: 480px) {
+    .container{
+        padding: 0 20px;
+    }
+
+    .left{
+        margin-left: 10px;
+    }
 
     
     .header {
