--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -20,7 +20,7 @@
 
     .registration {
         &__tittle {
-            font-size: 40px;
+            font-size: 36px;
         }
     }
 
@@ -155,6 +155,10 @@
             left: -29.5%;
         }
     }
+
+    .registration__circle {
+        top: -55px;
+    }
 }
 
 //=============================================================== 1270 ======================================================
@@ -183,7 +187,7 @@
         padding-bottom: 180px;
 
         &__circle {
-            width: 70%;
+            width: 60%;
 
             img {
                 width: 100%;
@@ -609,6 +613,10 @@
 //=============================================================== 992 ======================================================
 
 @media (max-width: 992px) {
+
+    .registration__circle {
+        top: -30px;
+    }
     .burger {
         display: block;
     }
