--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -380,7 +380,7 @@
 
         &__description {
             font-size: 22px;
-            left: 30%;
+            left: 15%;
         }
 
     }
@@ -686,6 +686,10 @@
             align-items: center;
             margin-top: 160px;
 
+        }
+
+        &__description{
+            position: static;
         }
     }
 
@@ -1642,8 +1646,7 @@
         }
 
         &__description {
-            position: static;
-            font-size: 16px;
+            font-size: 12px;
         }
     }
 
