--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -380,7 +380,8 @@
 
         &__description {
             font-size: 22px;
-            left: 15%;
+            left: 3%;
+            text-align: center;
         }
 
     }
