--- a/scss/_hover.scss
+++ b/scss/_hover.scss
@@ -86,3 +86,13 @@
         // text-shadow: 0px 6px 10px rgba(116, 249, 76, 0.65);
     }
 }
+
+.form__btn {
+   
+
+    transition: .3s;
+    &:hover{
+        color: #2D375F;
+    background: #919191;
+    }
+}
