--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -60,6 +60,7 @@
         line-height: 140%;
         color: #FFFFFF;
         margin-top: -34px;
+        text-transform: uppercase;
     }
 
     // .main__description
@@ -75,7 +76,7 @@
 
         color: #FFFFFF;
         position: absolute;
-        left: 252px;
+        left: 325px;
         bottom: -23px;
     }
 }
