--- a/scss/_hover.scss
+++ b/scss/_hover.scss
@@ -6,6 +6,14 @@
     }
 }
 
+.buy{
+    transition: .3s;
+
+    &:hover {
+        box-shadow: 0px 8px 15px rgba(116, 249, 76, 0.35);
+    }
+}
+
 .general-sponsor__site {
     img {
         transition: .3s;
