--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1376,6 +1376,9 @@
 //=============================================================== 720 ======================================================
 
 @media (max-width: 720px) {
+    body{
+        padding-bottom: 0;
+    }
     .send{
         display: none;
     }
