--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -47,7 +47,7 @@
     }
 
     .girl {
-        width: 60%;
+        // width: 60%;
         overflow: hidden;
     }
 
@@ -695,12 +695,12 @@
     }
 
     .main {
+        padding-top: 170px;
         &__content {
             width: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 160px;
 
         }
 
