--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -11,6 +11,13 @@ body {
     padding-bottom: 90px;
 }
 
+
+video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .container {
     margin: 0 auto;
     max-width: 1440px;
